--- a/app/styles/components/_channel.scss
+++ b/app/styles/components/_channel.scss
@@ -116,9 +116,8 @@
 
 .Channel-outlet {
 	min-height: 2rem;
-	margin-bottom: 0;
-	padding-top: 2rem;
-	padding-bottom: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 1px;
 }
 
 .Channel-titleSection {
